# Translator

./: .gitignore  LICENSE.txt  README.md  command_line.py  main.py  pyproject.toml  setup.py  web_interface.py
Equivalence_Applier/: equivalences.py  filter.py
Formula/: parser.py  structure.py
Testing/: performance_test.py  test_equivalence_applier.py  test_equivalences.py
static/: style.css
templates/: index.html
translator/: __init__.py  command_line.py  test.py
translator/Equivalence_Applier/: applier.py  equivalences.py  filter.py
translator/Formula/: reverse_parser.py
translator/Testing/: test_parser.py
translator/Web_Interface/: web_interface.py
translator_AryD05/: __init__.py  test.py
translator_AryD05/Equivalence_Applier/: applier.py  equivalences.py  filter.py
translator_AryD05/Formula/: parser.py  reverse_parser.py  structure.py
translator_AryD05/Testing/: performance_test.py  test_equivalence_applier.py  test_equivalences.py  test_filter.py  test_parser.py  test_structure.py
translator_AryD05/Web_Interface/: web_interface.py
